# vapoursynth-arm

./: .gitignore  Makefile  Makefile.am  configure.ac  readme.md
inc/: QTGMC.h  basePluginWrapper.h  common.h  ffms2Wrapper.h  fmtcWrapper.h  miscWrapper.h  mvtoolsWrapper.h  nnedi3Wrapper.h  removeGrainWrapper.h  stdWrapper.h  textWrapper.h
platform/android/config/: vapoursynth.conf
src/: QTGMC.cpp  basePluginWrapper.cpp  common.cpp  ffms2Wrapper.cpp  fmtcWrapper.cpp  main.cpp  miscWrapper.cpp  mvtoolsWrapper.cpp  nnedi3Wrapper.cpp  removeGrainWrapper.cpp  stdWrapper.cpp  textWrapper.cpp
